--- a/app/src/main/res/layout/activity_book__info.xml
+++ b/app/src/main/res/layout/activity_book__info.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/ic_play">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,9 +27,10 @@
             android:id="@+id/textView4"
             android:layout_width="342dp"
             android:layout_height="220dp"
-            android:layout_marginStart="24dp"
             android:layout_marginTop="36dp"
             android:text="@string/BookDescDetail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.347"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -68,18 +70,18 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
 
-        android:layout_height="192dp"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="192dp">
 
         <ImageView
             android:id="@+id/app_bar_image"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#FFEE58"
+            android:background="#9003A9F4"
 
             android:scaleType="centerInside"
-            android:src="@drawable/headphone"
-            app:layout_collapseMode="parallax" />
+            app:layout_collapseMode="parallax"
+            app:srcCompat="@drawable/open_book" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -125,8 +127,9 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:contentDescription="@string/ReadBook"
-        android:foreground="@android:drawable/ic_media_play"
         android:foregroundGravity="center"
+        android:src="@drawable/ic_play"
+        android:tint="#FFFFFF"
         app:backgroundTint="#64C0EA"
         app:rippleColor="#FFFFFF" />
 
